syntax = "proto3";

package build.please.remote.purity;

// The GC service provides an API for storage servers to report on their
// current status (free storage capacity and management of existing blobs).
service GC {
  // Info returns current information about the server.
  rpc Info(InfoRequest) returns (InfoResponse);
  // List provides a listing of currently stored items in the AC / CAS.
  rpc List(ListRequest) returns (ListResponse);
  // Delete removes an ittm (or items) from the server.
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message InfoRequest {
}

message InfoResponse {
  // Total bytes available to the node
  int64 total_bytes = 1;
  // Currently free bytes.
  int64 free_bytes = 2;
}

message ListRequest {
}

message ListResponse {
  // List of results in the AC on this server.
  repeated ActionResult action_results = 1;
  // List of blobs this server stores.
  repeated Blob blobs = 2;
}

// An ActionResult is a reference to an action result with a little additional information.
message ActionResult {
  string hash = 1;
  int64 size_bytes = 2;
  int64 last_accessed = 3;
}

message Blob {
  string hash = 1;
  int64 size_bytes = 2;
}

message DeleteRequest {
  // Action results to delete.
  repeated Blob action_results = 1;
  // CAS blobs to delete.
  repeated Blob blobs = 2;
}

message DeleteResponse {
}
